tests/samples/negative/types/literal_byte_string_unicode_escape.ax
module literal_byte_string_unicode_escape;

fn main() -> i32 {
    let bytes: [1]u8 = b"\u{41}";
    return ((bytes[0]) as i32);
}
